--- a/02-nginx.yaml
+++ b/02-nginx.yaml
@@ -4,10 +4,10 @@
   tasks: 
   - name: install nginx
     ansible.builtin.package:
-    - name: nginx
+      name: nginx
       state: latest
   - name: start nginx
     ansible.builtin.service:
-    - name: nginx
+      name: nginx
       state: started
       enabled: yes
