--- a/05-vars-task.yaml
+++ b/05-vars-task.yaml
@@ -6,9 +6,10 @@
    Duration: "105 days"
   tasks:
   - name: print info
-    course: Teraform
-    Trainer: SKumar
-    Duration: "10 days"
+    vars:
+      course: Teraform
+      Trainer: SKumar
+      Duration: "10 days"
     ansible.builtin.debug:
      msg: "Hi, we are learning {{course}} from {{Trainer}} within this {{Duration}}"
   
