--- a/inventory.ini
+++ b/inventory.ini
@@ -1,10 +1,14 @@
 [web]
 172.31.19.96
 
+[localhost]
+localhost
+
 [localhost:vars]
-course: Devops
-Trainer: SivaKumar
-Duration: "105 days"
+Course="DevOps with AWS"
+Trainer="Sivakumar"
+Duration="120hrs"
+#WISHES="Morning from inventory"
 
 [DB]
 172.31.19.99
