--- a/12-conditions.yaml
+++ b/12-conditions.yaml
@@ -1,5 +1,6 @@
 - name: to demonstrate conditions in ansible
   hosts: localhost
+  become: yes
   tasks:
     - name : To run user command
       ansible.builtin.command: id expense
@@ -9,6 +10,7 @@
     - name : To create user if the user doesnt exist
       ansible.builtin.command: useradd expense
       when: USER.rc !=0
+
 
 
   
