--- a/13-conditions.yaml
+++ b/13-conditions.yaml
@@ -12,6 +12,6 @@
   
   - name: number is greater than 10
     ansible.builtin.debug:
-      msg: "given number {{number}} is  greater than or less than 10"
+      msg: "given number {{number}} is  greater than or  equal to 10"
     when: number | int >= 10
     
