--- a/14-filters.yaml
+++ b/14-filters.yaml
@@ -10,3 +10,9 @@
   - name: print upper case
     ansible.builtin.debug:
       msg: "{{greeting | upper}}"
+  
+  - name: print lower case
+    ansible.builtin.debug:
+      msg: "{{greeting | lower}}"
+
+  
