--- a/14-filters.yaml
+++ b/14-filters.yaml
@@ -9,9 +9,9 @@
       Trainer: Sivakumar
       Duration: 120hr
     my_list:
-    - {'key': 'Course', 'value': 'Ansbile', 'key': 'Trainer', 'value': 'Sivakumar', 'key': 'Duration', 'value': '120hr'}
-    #- {'key': 'Trainer', 'value': 'Sivakumar'}
-    #- {'key': 'Duration', 'value': '120hr'}
+    - {'key': 'Course', 'value': 'Ansbile', 'key': 'Trainer'}
+    - {'key': 'Trainer', 'value': 'Sivakumar'}
+    - {'key': 'Duration', 'value': '120hr'}
   tasks:
   - name: print default value
     ansible.builtin.debug:
@@ -44,7 +44,7 @@
   - name: before convert
     ansible.builtin.debug:
       msg: "Before convert: {{ my_list }}"
-      
+
   - name: after convert
     ansible.builtin.debug:
       msg: "After convert: {{ my_list | items2dict }}"
