--- a/14-filters.yaml
+++ b/14-filters.yaml
@@ -9,7 +9,7 @@
       Trainer: Sivakumar
       Duration: 120hr
     my_list:
-    - {'key': 'Course', 'value': 'Ansbile', 'key': 'Trainer'}
+    - {'key': 'Course', 'value': 'Ansbile'}
     - {'key': 'Trainer', 'value': 'Sivakumar'}
     - {'key': 'Duration', 'value': '120hr'}
   tasks:
